<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:gravity="center_horizontal"
    android:paddingHorizontal="25dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/headerLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/judul"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:autofillHints="emailAddress"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:hint="@string/pass"
        android:drawableEnd="@drawable/ic_visibility"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_gravity="end"
        android:clickable="true"
        android:layout_marginEnd="25dp"
        android:gravity="center_vertical"
        android:text="@string/inkwell"
        android:textColor="#0876A8"
        android:textSize="16sp" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:text="@string/button"
        android:textSize="16sp"
        android:textColor="#000000"
        android:backgroundTint="#DAD7D7"/>

</LinearLayout>