<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/profile"
        android:contentDescription="@string/photo"
        android:layout_width="60dp"
        android:layout_height="match_parent"
        android:src="@drawable/ic_person"
        android:layout_margin="3dp"/>

    <LinearLayout
        android:id="@+id/namePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/name"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/phone"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="#000000"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="end"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:contentDescription="@string/ic_edit"
            android:src="@drawable/ic_edit" />

        <ImageView
            android:id="@+id/icon_close"
            android:contentDescription="@string/ic_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:src="@drawable/ic_close"/>
    </LinearLayout>

</LinearLayout>
